# eertools

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  README.md  eertools.cpp  eertools_cpputest.cpp
cmake/Modules/: FindCppUTest.cmake
src/: CMakeLists.txt  eertools.h
test/: CMakeLists.txt  eertools_cpputest.cpp
